objects/IAM_DA_Portal_TSP_Name__mdt.object
<CustomObject>
    <fields>
        <fullName>IAM_App_Status__c</fullName>
        <label>IAM App Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Contact Approval</fullName>
                </value>
                <value>
                    <fullName>Active-Indemnified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_CDA_Status__c</fullName>
        <label>CDA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No CDA Required</fullName>
                    <default>true</default>
                    <label>No CDA Required</label>
                </value>
                <value>
                    <fullName>New Customer Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reclaim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Indemnified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indemnified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Moratorium__c</fullName>
        <label>Moratorium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_User_Feature_Access_Status__c</fullName>
        <label>User Feature Access Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active-Indemnified</fullName>
                </value>
                <value>
                    <fullName>Pending Account Level</fullName>
                </value>
                <value>
                    <fullName>Pending Account Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Contact Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IAM DA Portal TSP</label>
    <pluralLabel>IAM DA Portal TSP Names</pluralLabel>
</CustomObject>